--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -1,1 +1,18 @@
-<p>Hola mundo!</p>
+<form class="form-signin">
+    
+    <h1 class="h3 mb-3 font-weight-normal">Iniciar Sesion</h1>
+    <label for="inputEmail" class="sr-only">Nombre de usuario</label>
+    <input type="text" id="inputEmail" class="form-control" placeholder="Nombre de usuario" required autofocus>
+
+    <label for="inputPassword" class="sr-only">Contraseña</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Contrasena" required>
+    <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" value="remember-me"> Recordarme
+        </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar sesion</button>
+    <a [routerLink]="['register']" class="btn btn-lg btn-success btn-block" type="submit">Registrarme</a>
+    <p class="mt-5 mb-3 text-muted">&copy; 2018</p>
+    
+</form>
