Agregando vistas nuevas

--- a/Frontend/src/app/modules/ModeradorModule/moderador.component.html
+++ b/Frontend/src/app/modules/ModeradorModule/moderador.component.html
@@ -28,7 +28,7 @@
                     <a [routerLink]="['medidas']" class="nav-link sidebar-link">Temperatura y humedad</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sidebar-link">Comparar Temperaturas</a>
+                    <a [routerLink]="['compararmedidas']" class="nav-link sidebar-link">Comparar Temperaturas</a>
                 </li>
                 <li class="nav-item">
                     <a [routerLink]="['responderpreguntas']" class="nav-link sidebar-link">Preguntas</a>
@@ -45,7 +45,7 @@
                     <a [routerLink]="['aceptarpreguntas']" class="nav-link sidebar-link">Preguntas y comentarios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sidebar-link">Usuarios</a>
+                    <a [routerLink]="['usuarios']" class="nav-link sidebar-link">Usuarios</a>
                 </li>
                 <li class="nav-item">
                     <hr>
