--- a/Frontend/src/app/modules/UsuarioModule/usuario.component.html
+++ b/Frontend/src/app/modules/UsuarioModule/usuario.component.html
@@ -28,7 +28,7 @@
                     <a [routerLink]="['medidas']" class="nav-link sidebar-link">Temperatura y humedad</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sidebar-link">Comparar Temperaturas</a>
+                    <a [routerLink]="['compararmedidas']" class="nav-link sidebar-link">Comparar Temperaturas</a>
                 </li>
                 <li class="nav-item">
                     <a [routerLink]="['responderpreguntas']" class="nav-link sidebar-link">Preguntas</a>
