--- a/Frontend/src/app/modules/UsuarioModule/usuario.component.html
+++ b/Frontend/src/app/modules/UsuarioModule/usuario.component.html
@@ -31,10 +31,13 @@
                     <a [routerLink]="['compararmedidas']" class="nav-link sidebar-link">Comparar Temperaturas</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['responderpreguntas']" class="nav-link sidebar-link">Preguntas</a>
+                    <a [routerLink]="['preguntas']" class="nav-link sidebar-link">Preguntas</a>
                 </li>
                 <li class="nav-item">
                     <hr>
+                </li>
+                <li class="nav-item">
+                    <a (click)="cerrarSesion()" class="nav-link sidebar-link">Cerrar Sesión</a>
                 </li>
             </ul>
         </nav>
