--- a/Frontend/src/app/components/preguntas/preguntas.component.html
+++ b/Frontend/src/app/components/preguntas/preguntas.component.html
@@ -2,29 +2,28 @@
     Preguntas
 </h2>
 
-<div *ngIf="pregunta">
+<div *ngIf="preguntas">
     <div *ngFor="let pregunta of preguntas" class="card">
         <div class="card-header">
             {{pregunta.usuario.nombre}}
-            <span class="float-right">{{pregunta.created_at}}</span>
+            <span class="float-right">{{pregunta.createdAt.toLocaleString("es-cl")}}</span>
         </div>
         <div class="card-body">
             <h4>{{pregunta.pregunta}}</h4>
 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis interdum facilisis mattis. Morbi molestie metus nec lacinia
-            laoreet. Fusce varius aliquam orci, non mattis nisl fringilla vel. Integer consectetur, lorem quis ornare volutpat,
-            dolor massa viverra orci, pellentesque tristique sapien nunc eu dui.
+            <p>{{pregunta.descripcion}}</p>
             <hr>
 
-            <div class="ml-5 mt-1 pt-0">
-                <small>
-                    <strong>Juanito</strong>:
-                    <span class="float-right">10:49 AM 03/02/2018</span>
-                </small>
-                <p>Duis interdum facilisis mattis. Morbi molestie metus nec lacinia laoreet</p>
+            <div *ngIf="pregunta.respuestas.length > 0" class="ml-5 mt-1 pt-0">
+                <div *ngFor="let respuesta of pregunta.respuestas">
+                    <small>
+                        <strong>{{respuesta.usuario.nombre}}</strong>:
+                        <span class="float-right">{{respuesta.createdAt.toLocaleString("es-cl")}}</span>
+                    </small>
+                    <p>{{respuesta.respuesta}}</p>
+                </div>
             </div>
-            <hr>
-
+            <hr *ngIf="pregunta.respuestas.length > 0">
 
             <textarea class="form-control" placeholder="Escribe tu comentario aqui" rows="3"></textarea>
             <div class="text-right mt-3">
