--- a/Frontend/src/app/components/medidas/medidas.component.html
+++ b/Frontend/src/app/components/medidas/medidas.component.html
@@ -44,7 +44,18 @@
 
 <div class="row">
     <div class="text-left col-md-6 mb-4">
-        <img class="img-fluid" src="http://via.placeholder.com/700x450?text=GRAFICO+AQUI">
+        <div>
+            <canvas baseChart
+                    [datasets]="lineChartData"
+                    [labels]="lineChartLabels"
+                    [options]="lineChartOptions"
+                    [colors]="lineChartColors"
+                    [legend]="lineChartLegend"
+                    [chartType]="lineChartType"
+                    (chartHover)="chartHovered($event)"
+                    (chartClick)="chartClicked($event)">
+            </canvas>
+        </div>
     </div>
     <div class="col-md-4">
         <p>Humedad (min):</p>
