--- a/Frontend/src/app/components/preguntas/preguntas.component.html
+++ b/Frontend/src/app/components/preguntas/preguntas.component.html
@@ -3,7 +3,7 @@
 </h2>
 
 <div *ngIf="preguntas">
-    <div *ngFor="let pregunta of preguntas" class="card">
+    <div *ngFor="let pregunta of preguntas; let i = index" class="card">
         <div class="card-header">
             {{pregunta.usuario.nombre}}
             <span class="float-right">{{pregunta.createdAt.toLocaleString("es-cl")}}</span>
@@ -25,12 +25,12 @@
             </div>
             <hr *ngIf="pregunta.respuestas.length > 0">
 
-            <textarea class="form-control" placeholder="Escribe tu comentario aqui" rows="3"></textarea>
-            <div class="text-right mt-3">
-                <button class="btn btn-primary">
-                    Enviar
-                </button>
-            </div>
+            <form (ngSubmit)="onSubmit(i)">
+                <input type="textarea" name="respuesta" [(ngModel)]="respuestas[i].respuesta" class="form-control" placeholder="Escribe tu comentario aqui" rows="3">
+                <div class="text-right mt-3">
+                    <input type="submit" value="Enviar" class="btn btn-primary">
+                </div>
+            </form>
         </div>
     </div>
 </div>
