--- a/Frontend/src/app/components/compararmedidas/compararmedidas.component.html
+++ b/Frontend/src/app/components/compararmedidas/compararmedidas.component.html
@@ -78,9 +78,9 @@
 
 <div class="row">
     <div class="text-left col-md-6 mb-4">
-        <img class="img-fluid" src="http://via.placeholder.com/700x450?text=GRAFICO+1+AQUI">
+        <graficolineas></graficolineas>
     </div>
     <div class="col-md-6">
-        <img class="img-fluid" src="http://via.placeholder.com/700x450?text=GRAFICO+2+AQUI">
+        <graficolineas></graficolineas>
     </div>
 </div>
