Cambios Frontend y Backend

--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
 <form class="form-signin" (ngSubmit)="onSubmit()">
 
     <div *ngIf="error" class="alert alert-danger">
-        <strong>Inicio de sesión fallido!</strong><br>
-        Nombre de usuario o contraseña incorrecta.
+        <strong>Inicio de sesión fallido!</strong>
+        <br> Nombre de usuario o contraseña incorrecta.
     </div>
 
     <h1 class="h3 mb-3 font-weight-normal">Iniciar Sesion</h1>
