--- a/Frontend/src/app/components/compararmedidas/compararmedidas.component.html
+++ b/Frontend/src/app/components/compararmedidas/compararmedidas.component.html
@@ -2,7 +2,7 @@
     Comparar Temperaturas
 </h2>
 
-<form method="post" action="#">
+<form (ngSubmit)="onSubmit()">
     <p>Intervalo</p>
     <div class="row">
         <div class="col-6">
@@ -10,7 +10,7 @@
                 <label for="desde" class="col-sm-2 col-form-label">Del</label>
                 <div class="col-sm-10">
                     <div class="input-group mb-2">
-                        <input type="date" class="form-control d-inline" id="desde" placeholder="">
+                        <input type="date" name="primeraFechaA" [(ngModel)]="primeraFechaA" class="form-control d-inline" id="desde" placeholder="">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <i class="far fa-calendar-alt"></i>
@@ -25,7 +25,7 @@
                 <label for="hasta" class="col-sm-2 col-form-label">al</label>
                 <div class="col-sm-10">
                     <div class="input-group mb-2">
-                        <input type="date" class="form-control" id="hasta" placeholder="">
+                        <input type="date" name="segundaFechaA" [(ngModel)]="segundaFechaA" class="form-control" id="hasta" placeholder="">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <i class="far fa-calendar-alt"></i>
@@ -43,7 +43,7 @@
                 <label for="desde" class="col-sm-2 col-form-label">Del</label>
                 <div class="col-sm-10">
                     <div class="input-group mb-2">
-                        <input type="date" class="form-control d-inline" id="desde" placeholder="">
+                        <input type="date" name="primeraFechaB" [(ngModel)]="primeraFechaB" class="form-control d-inline" id="desde" placeholder="">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <i class="far fa-calendar-alt"></i>
@@ -58,7 +58,7 @@
                 <label for="hasta" class="col-sm-2 col-form-label">al</label>
                 <div class="col-sm-10">
                     <div class="input-group mb-2">
-                        <input type="date" class="form-control" id="hasta" placeholder="">
+                        <input type="date" name="segundaFechaB" [(ngModel)]="segundaFechaB" class="form-control" id="hasta" placeholder="">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <i class="far fa-calendar-alt"></i>
@@ -71,16 +71,16 @@
     </div>
 
     <div class="text-right">
-        <button class="btn btn-outline-primary">Comparar</button>
+        <input type="submit" value="Comparar" class="btn btn-outline-primary">
     </div>
 </form>
 <hr>
 
 <div class="row">
     <div class="text-left col-md-6 mb-4">
-        <graficolineas></graficolineas>
+        <graficolineas #primerGrafico></graficolineas>
     </div>
     <div class="col-md-6">
-        <graficolineas></graficolineas>
+        <graficolineas #segundoGrafico></graficolineas>
     </div>
 </div>
