--- a/Frontend/src/app/components/graficolineas/graficolineas.component.html
+++ b/Frontend/src/app/components/graficolineas/graficolineas.component.html
@@ -5,8 +5,6 @@
                 [options]="lineChartOptions"
                 [colors]="lineChartColors"
                 [legend]="lineChartLegend"
-                [chartType]="lineChartType"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)">
+                [chartType]="lineChartType">
         </canvas>
 </div>
