--- a/Frontend/src/app/components/medidas/medidas.component.html
+++ b/Frontend/src/app/components/medidas/medidas.component.html
@@ -2,7 +2,7 @@
     Temperaturas y humedad
 </h2>
 
-<form method="post" action="#">
+<form (ngSubmit)="onSubmit()">
     <p>Intervalo</p>
     <div class="row">
         <div class="col-6">
@@ -10,7 +10,7 @@
                 <label for="desde" class="col-sm-2 col-form-label">Del</label>
                 <div class="col-sm-10">
                     <div class="input-group mb-2">
-                        <input type="date" class="form-control d-inline" id="desde" placeholder="">
+                        <input type="date" name="primeraFecha" [(ngModel)]="primeraFecha" class="form-control d-inline" id="desde" placeholder="">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <i class="far fa-calendar-alt"></i>
@@ -25,7 +25,7 @@
                 <label for="hasta" class="col-sm-2 col-form-label">al</label>
                 <div class="col-sm-10">
                     <div class="input-group mb-2">
-                        <input type="date" class="form-control" id="hasta" placeholder="">
+                        <input type="date" name="segundaFecha" [(ngModel)]="segundaFecha" class="form-control" id="hasta" placeholder="">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <i class="far fa-calendar-alt"></i>
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="text-right">
-        <button class="btn btn-outline-primary">Visualizar</button>
+        <input type="submit" value="Visualizar" class="btn btn-outline-primary">
     </div>
 </form>
 <hr>
@@ -47,10 +47,9 @@
         <graficolineas></graficolineas>
     </div>
     <div class="col-md-4">
-        <p>Humedad (min):</p>
-        <p>Humedad (max):</p>
-        <p>Temperatura (min):</p>
-        <p>Temperatura (max):</p>
+        <p>Humedad (min): {{humedadMin}}</p>
+        <p>Humedad (max): {{humedadMax}}</p>
+        <p>Temperatura (min): {{temperaturaMin}}</p>
+        <p>Temperatura (max): {{temperaturaMax}}</p>
     </div>
-
 </div>
